sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:10: error: Unmatched closing brace '}' ignored here
    }
    ^